--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
     "host": "localhost",
     "port": "3306",
     "username": "root",
-    "password": "",
+    "password": "kmg09",
     "database": "query_form",
     "synchronize": true,
     "logging": true,
